yarn init webpack typescript electron development

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,38 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
-123132123131
+<button data-code="func=html&args=1-1">代理人</button>
+<button data-code="func=html&args=1-2">坐席</button>
+<button data-code="func=html&args=1-3">员工</button>
+<button data-code="func=html&args=1-4">查勘</button>
+<button data-code="func=html&args=2">用户</button>
+<button data-code="func=html&args=3-1">金融服务</button>
+<button data-code="func=html&args=3-2">医疗服务</button>
+<button data-code="func=html&args=3-3">汽车服务</button>
+<button data-code="func=html&args=3-4">房产服务</button>
 </body>
 </html>
